--- a/boilerplates/App/package.json
+++ b/boilerplates/App/package.json
@@ -32,6 +32,7 @@
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.4.1",
     "commander": "^2.15.1",
+    "connect-history-api-fallback": "^1.5.0",
     "cross-env": "^5.1.5",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
@@ -41,6 +42,7 @@
     "eslint-plugin-react": "^7.8.1",
     "execa": "^0.10.0",
     "husky": "^0.14.3",
+    "koa-connect": "^2.0.1",
     "lint-staged": "^7.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
@@ -57,13 +59,14 @@
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dashboard": "^1.1.1",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-serve": "^1.0.2",
+    "webpack-serve-waitpage": "^1.0.0"
   },
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "styled-components": "^3.2.6"
